# PulseReconstruction

./: .gitignore  PulseReconstruction.m  createBasis.m  experimental_pulses_5g.mat  gaussianExpansion.m  matrixElementsCalculation_xcorr.m  matrixElementsSPI.m  matrixElementsSPI_xcorr.m  matrixElementsTPI.m  matrixElementsTPI_xcorr.m  subMatrixElementsSPI.m
apps/: PulseReconstruction.m
cpp_src/: CMakeLists.txt  autocorrelation.cpp  autocorrelation.h  h5_functions.cpp  h5_functions.h  main.cpp  physics_functions.cpp  physics_functions.h  sub_matrix_elements.cpp  sub_matrix_elements.h
data/: experimental_pulses_16g.mat  experimental_pulses_7g.mat  harmonic_expansion.mat  helium_experiment_16g.mat
src/: Laser.m  PulseReconstruction.m  basisCalculation.m  createCppDatafile.m  error_function.m  filterHarmonic.m  gaussianExpansion.m  matrixElementsCalculation.m  matrixElementsCalculation_xcorr.m  matrixElementsSPI_xcorr.m  matrixElementsTPI_xcorr.m  murilo_2photon_PT.m  plotting.m  subMatrixElementsTPI.m
